--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ backend/env
 backend/app/__pycache__
 backend/app/alembic
 backend/app/data
+backend/app/models/__pycache__
+backend/app/repositories/__pycache__
+backend/app/routers/__pycache__
+backend/app/schemas/__pycache__
+backend/app/services/__pycache__
+backend/app/.env
+backend/app/alembic.ini
